	- updated JNI_VERSION: 1.8/1.6 on Linux (depending on distro default), 1.8 on Windows,
	1.8 on Mac >= 10.7, 1.6 on Mac < 10.7 and 1.6 on Android
	- iOS >= 8 (default 10)
	- Android >= 2.3 (API level 9) (default 4.4.2 (API level 19))
	- qmake files cleanup
	- iOS, Ubuntu 14.04: updated Qt to 5.9.7
	- Ubuntu 16.04: updated Qt to 5.12.3
	- openSUSE TW: java 12 and boost 1.69
- Fixed bugs:
	- executor: workaround for Qt bug #6799
	- executor: if Qt < 5.6.2 then may be affected by Qt bug #54831


Version 1.1.0.1:
- Release date: 2 Jul 2018
- New features:
	- added PosixSignalsWatcher (Unix)
	- CoreApplicationBase: added support for termination signals (Unix + Windows)
	- added GetCurrentProcessId()
	- added ScreenSaver (desktops only)
	- added DeviceNotifier (desktops only)
	- added PowerNotifier (desktops only)
	- added SessionManager + Session (desktops only)
	- added ServiceBase/Service/ServiceController supporting termination signals and reload config
	- added support for Ubuntu 18.04
	- added support for openSUSE Leap 15 (Leap 42.2 no longer supported; EOL since 26 Jan 2018)
	- removed ComputerManager (replaced by SessionManager)
	- removed GetUserIdleTime() (replaced by Session::GetIdleTime())
- Improvements:
	- do not conflict with boost signals
	- zlib dependency is optional (affects QZipReader and QZipWriter)
	- CoreApplicationBase::SetInfo(): added componentName
	- GCC/Clang visibility
	- template explicit instantiation review
	- separated QtSolutions libraries
	- Mac OS X: QMAKE_SONAME_PREFIX = @rpath and QMAKE_RPATHDIR *= @loader_path/../Frameworks
	- updated Qt to 5.9.6 on Ubuntu 16.04 and 14.04
	- updated CentOS 7 to 7.5
	- updated CentOS 6 to 6.10
	- tested with GCC 8 and Qt 5.11 on openSUSE Tumbleweed
	- updated internal boost to 1.67.0
- Fixed bugs:
	- fixed enabling GCC/Clang C++11 and extensions


Version 1.0.9.1:
- Release date: 14 Mar 2018
- New features:
	- added localization test/sample app
- Improvements:
	- localization support review