@@ -69,24 +69,7 @@ int main(int argc, char* argv[]) try {
 	
 	::cppdevtk::test_service::HttpService httpService(argc, argv);
 	
-	try {
-		return httpService.exec();
-	}
-	catch (const exception& exc) {
-		const QString kErrMsg = QString("caught ::std::exception: %1\nDetails: %2").arg(
-				exc.what(), Exception::GetDetailedInfo(exc));
-		CPPDEVTK_LOG_ERROR(kErrMsg);
-		CPPDEVTK_CERR << "Error: " << kErrMsg << endl;
-		
-		return EXIT_FAILURE;
-	}
-	catch (...) {
-		const QString kErrMsg("caught unknown exception!!!");
-		CPPDEVTK_LOG_ERROR(kErrMsg);
-		CPPDEVTK_CERR << "Error: " << kErrMsg << endl;
-		
-		return EXIT_FAILURE;
-	}
+	return httpService.exec();
 }
 catch (const exception& exc) {
 	const QString kErrMsg = QString("caught ::std::exception: %1\nDetails: %2").arg(
