@@ -17,6 +17,7 @@ Version 1.1.1.1:
 	- iOS, Ubuntu 14.04: updated Qt to 5.9.7
 	- Ubuntu 16.04: updated Qt to 5.12.3
 	- openSUSE TW: java 12 and boost 1.69
+	- added CPPDEVTK_ON_BLOCK_EXIT_CATCH
 - Fixed bugs:
 	- executor: workaround for Qt bug #6799
 	- executor: if Qt < 5.6.2 then may be affected by Qt bug #54831
